# scfapp-log-alerts

./: LICENSE  README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python-prod.yml  azure-functions-app-python-psb.yml  azure-functions-app-python.yml
src/scfapp/log_alerts/: config.py
src/scfapp/log_alerts/blueprints/: bp_errors.py  bp_requests.py
src/scfapp/log_alerts/services/: email_service.py  errors_service.py  requests_service.py
