[project]
name = "scfapp-log-alerts"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom Boone",email = "boone@wrlc.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions (>=1.23.0,<2.0.0)",
    "azure-communication-email (>=1.0.0,<2.0.0)",
    "azure-identity (>=1.23.0,<2.0.0)",
    "azure-monitor-query (>=1.4.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "azure-storage-file-share (>=12.21.0,<13.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
